[package]
name = "bhatho"
version = "0.1.0"
authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
edition = "2018"
description = "LRU Caching library with persistent layer using RocksDB"
keywords=["LRU", "cache", "rockdb", "persistent", "caching"]
License="Apache 2.0"
license-file="LICENSE"
publish = false

[badges]
travis-ci = { repository = "https://github.com/rohitjoshi/bhatho", branch = "master" }
codecov = { repository = "https://github.com/rohitjoshi/bhatho", branch = "master", service = "github" }




[dependencies]
log="*"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json="*"
crossbeam-channel = "0.3.2"
#lru = "0.1.11"
lru = {git="https://github.com/rohitjoshi/lru-rs", version="*"}
hashbrown = "0.1.8"
parking_lot = "0.7.1"
rand="0.6"
twox-hash = "1.1.2"
regex="*"
rocksdb = {git="https://github.com/rohitjoshi/rust-rocksdb", version="*"}
