[package]
name = "bhatho"
version = "0.1.0"
authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
edition = "2018"
description = "LRU Caching library with persistent layer using RocksDB"
keywords=["LRU", "cache", "rockdb", "persistent", "caching"]
License="Apache 2.0"
license-file="LICENSE"
publish = true

[badges]
travis-ci = { repository = "https://travis-ci.org/rohitjoshi/bhatho", branch = "master" }
codecov = { repository = "https://codecov.io/gh/rohitjoshi/bhatho", branch = "master", service = "github" }




[dependencies]
log="0.4.6"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json="1.0.33"
crossbeam-channel = "0.3.2"
#lru = "0.1.11"
lru = {path = "./lru-rs", version="0.1.11"}
hashbrown = "0.1.8"
parking_lot = "0.7.1"
rand="0.6"
twox-hash = "1.1.2"
regex="1.1.0"
rocksdb = { path="./rust-rocksdb", version="0.11.1"}
