[package]
name = "bhatho"
version = "0.1.1"
authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
edition = "2018"
description = "LRU Caching library with persistent layer using RocksDB"
keywords=["LRU", "cache", "rockdb", "persistent", "caching"]
License="Apache 2.0"
license-file="LICENSE"
publish = true

[badges]
travis-ci = { repository = "https://travis-ci.org/rohitjoshi/bhatho", branch = "master" }
codecov = { repository = "https://codecov.io/gh/rohitjoshi/bhatho", branch = "master", service = "github" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false


[dependencies]
log = { version = "0.3", features = ["max_level_trace", "release_max_level_info"] }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json="1.0.33"
crossbeam-channel = "0.3.2"
lru = "0.1.12"
#lru =  {path="../lru-rs", version="*"}
hashbrown = { version = "0.1.8",  features = ["serde", "rayon"] }
parking_lot = "0.7.1"
rand="0.6"
twox-hash = "1.1.2"
jumphash = "~0"
crc16 = "0.4.0"
regex="1.1.0"
#rocksdb = {git="https://github.com/rust-rocksdb/rust-rocksdb", version="*"}
rocksdb="0.12.1"
scoped_threadpool="0.1.9"
rayon="1.0.3"
#sthash="0.2.3"

